Revert "Fix simple NPC sheet max health being clipped and minor style tweaks"
This reverts commit 258fd8703398405fe1e9a2e2378d6a2125f31481.

--- a/src/styles/actor/npc/_index.scss
+++ b/src/styles/actor/npc/_index.scss
@@ -168,7 +168,6 @@ $unique: #54166e;
                 text-align: right;
                 font-weight: bold;
                 color: $value-color;
-                margin-right: 4px;
             }
         }
 
@@ -185,28 +184,25 @@ $unique: #54166e;
                 display: flex;
                 flex: auto;
                 flex-direction: row;
-                align-items: baseline;
-                justify-content: flex-end;
+                align-items: flex-end;
                 text-align: right;
                 font-weight: bold;
                 color: $value-color;
 
-                .shield-divider {
-                    align-self: flex-end;
-                }
-
                 #shield-current {
+                    flex: 0px;
                     font-weight: bold;
                     color: $value-color;
                     text-align: right;
-                    width: 30px;
+                    width: 50px;
                 }
 
                 #shield-max {
+                    flex: 0px;
+                    align-self: center;
                     font-weight: bold;
                     color: $value-color;
                     text-align: left;
-                    margin-right: 4px;
                 }
             }
 
@@ -267,30 +263,18 @@ $unique: #54166e;
                 text-align: right;
                 font-weight: bold;
                 color: $value-color;
-                justify-content: flex-end;
-
-                .health-divider {
-                    align-self: flex-end;
-                }
 
                 #health-current {
                     font-weight: bold;
                     color: $value-color;
                     text-align: right;
-                    width: 30px;
                 }
 
                 #health-max {
+                    flex: 0px;
                     font-weight: bold;
                     color: $value-color;
                     text-align: left;
-                    width: 20px;
-                }
-                #health-max-extended {
-                    font-weight: bold;
-                    color: $value-color;
-                    text-align: left;
-                    width: 30px;
                 }
             }
         }
